# 2D_platformer

./: CMakeLists.txt
src/: Player.cpp  Player.h  main.cpp
